[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "FastThrottle"
version = "0.1.0"
description = "An efficient and easy-to-integrate rate limiter for FastAPI applications."
authors = [{ name = "Uka Osim", email = "hsojo91@gmail.com" }]
readme = "README.md"
repository = "https://github.com/osimuka/FastThrottle"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU GENERAL PUBLIC LICENSE",
    "Operating System :: OS Independent",
]
license = "GNU GENERAL PUBLIC LICENSE"
license-file = "LICENSE"

[options]
packages = ["fastthrottle"]
python_requires = ">=3.6"
install_requires = ["fastapi", "redis"]
